--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,13 @@
             <version>${jackson-annotations.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+
+
     </dependencies>
 
 
